--- a/service.html
+++ b/service.html
@@ -221,15 +221,15 @@
         <!-- Testimonial End -->
 
 
-   <!-- Footer Start -->
-   <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Bd Ondimba, Port-Gentil, GABON</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Ondimba, Port-Gentil, GA</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com.com</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -239,9 +239,9 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Services</h4>
-                <a class="btn btn-link" href="">Transport Aérien</a>
-                <a class="btn btn-link" href="">Transport Maritime</a>
-                <a class="btn btn-link" href="">Transport Terrestre</a>
+                <a class="btn btn-link" href="">Produits Roulés</a>
+                <a class="btn btn-link" href="">Produits concassés</a>
+                <a class="btn btn-link" href="">Gravier Concassé</a>
                 <a class="btn btn-link" href="">Solutions Logistiques</a>
                 <a class="btn btn-link" href="">Solutions sectorielles</a>
             </div>
@@ -249,13 +249,13 @@
                 <h4 class="text-light mb-4">Liens rapides</h4>
                 <a class="btn btn-link" href="">Qui sommes-nous</a>
                 <a class="btn btn-link" href="">Contactez-nous</a>
-                <a class="btn btn-link" href="">nos Services</a>
+                <a class="btn btn-link" href="">Nos Services</a>
                 <a class="btn btn-link" href="">Termes et conditions</a>
                 <a class="btn btn-link" href="">Support</a>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Newsletter</h4>
-                <p>Aboonez-vous pour ne manquer aucune de nos offres et services.</p>
+                <p>Abonnez-vous à notre Newsletter pour ne manquer aucune de nos offres et services.</p>
                 <div class="position-relative mx-auto" style="max-width: 400px;">
                     <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre e-mail">
                     <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">S'abonner</button>
