Application des modifications

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Vente de granulats</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Place pour vos <span class="text-primary">Solutions</span> de Constructions et de Transports</h1>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Vente de matériaux de construction</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de contrcution</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, négoce, vente et transport de matériaux de construction pour les professionnels et les particuliers.</p></span>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
@@ -98,9 +98,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Vente de granulats</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">#1 place pour vos <span class="text-primary">Solutions</span> de Transports</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de constructions</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de contrcution</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, négoce, vente et transport de matériaux de construction pour les professionnels et les particuliers.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
                             </div>
@@ -135,12 +135,12 @@
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                             <i class="fa fa-globe fa-3x text-primary mb-3"></i>
                             <h5>Couverture nationale</h5>
-                            <p class="m-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam justo.</p>
+                            <p class="m-0">Nous vous livrons selon les zone d'accessibilité rurale</p>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                             <i class="fa fa-shipping-fast fa-3x text-primary mb-3"></i>
                             <h5>Livraison à temps</h5>
-                            <p class="m-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam justo.</p>
+                            <p class="m-0">Nousvous livrons à temps pour vous permettre de terminer vos travaux à temps</p>
                         </div>
                     </div>
                     <a href="" class="btn btn-primary py-3 px-5">En savoir plus</a>
@@ -157,8 +157,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Quelques faits</h6>
-                    <h1 class="mb-5">Un endroit pour gérer tous vos envois</h1>
-                    <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="mb-5">Un endroit pour gérer tous votre logistque</h1>
+                    <p class="mb-5">Soucieux des enjeux économiques actuels, Bikere a mis en place une plateforme de gestion de vos logistique</p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
@@ -240,7 +240,7 @@
                             <img class="img-fluid" src="img/service-4.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Transport ferroviaire</h4>
-                        <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                        <p>Détails en cours de chargement et seront disponibles plus tard</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                             <img class="img-fluid" src="img/service-5.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Dédouanement</h4>
-                        <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                        <p>Détails en cours de chargement et seront disponibles plus tard</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                             <img class="img-fluid" src="img/service-6.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Solutions d’entrepôt</h4>
-                        <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                        <p>Détails en cours de chargement et seront disponibles plus tard</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>24/7 Assistance téléphonique</h5>
-                            <p class="mb-0">Diam dolor ipsum sit amet eos erat ipsum lorem sed stet lorem sit clita duo justo magna erat amet</p>
+                            <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard</p>
                         </div>
                     </div>
                 </div>
@@ -333,10 +333,10 @@
                             </h1>
                         </div>
                         <div class="p-4 pt-0">
-                            <p><i class="fa fa-check text-success me-3"></i>HTML5 & CSS3</p>
-                            <p><i class="fa fa-check text-success me-3"></i>Bootstrap v5</p>
-                            <p><i class="fa fa-check text-success me-3"></i>FontAwesome Icons</p>
-                            <p><i class="fa fa-check text-success me-3"></i>Responsive Layout</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 1</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 2</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 3</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 3</p>
                             <p><i class="fa fa-check text-success me-3"></i>Prise en charge multi-navigateurs</p>
                             <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span >Commandez maintenant</span></a>
                         </div>
@@ -352,10 +352,10 @@
                         </h1>
                     </div>
                     <div class="p-4 pt-0">
-                        <p><i class="fa fa-check text-success me-3"></i>HTML5 & CSS3</p>
-                        <p><i class="fa fa-check text-success me-3"></i>Bootstrap v5</p>
-                        <p><i class="fa fa-check text-success me-3"></i>FontAwesome Icons</p>
-                        <p><i class="fa fa-check text-success me-3"></i>Responsive Layout</p>
+                        <p><i class="fa fa-check text-success me-3"></i>Solution 1</p>
+                        <p><i class="fa fa-check text-success me-3"></i>Solution 2</p>
+                        <p><i class="fa fa-check text-success me-3"></i>Solution 3</p>
+                        <p><i class="fa fa-check text-success me-3"></i>Solution 3</p>
                         <p><i class="fa fa-check text-success me-3"></i>Prise en charge multi-navigateurs</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span >Commandez maintenant</span></a>
                     </div>
@@ -371,10 +371,10 @@
                             </h1>
                         </div>
                         <div class="p-4 pt-0">
-                            <p><i class="fa fa-check text-success me-3"></i>HTML5 & CSS3</p>
-                            <p><i class="fa fa-check text-success me-3"></i>Bootstrap v5</p>
-                            <p><i class="fa fa-check text-success me-3"></i>FontAwesome Icons</p>
-                            <p><i class="fa fa-check text-success me-3"></i>Responsive Layout</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 1</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 2</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 3</p>
+                            <p><i class="fa fa-check text-success me-3"></i>Solution 3</p>
                             <p><i class="fa fa-check text-success me-3"></i>Prise en charge multi-navigateurs</p>
                             <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span >Commandz maintenant</span></a>
                         </div>
@@ -393,7 +393,7 @@
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Obtenir un dévis</h6>
                     <h1 class="mb-5">Demander un Devis!</h1>
-                    <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                    <p class="mb-5">Détails en cours de chargement et seront disponibles plus tard </p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
@@ -538,7 +538,7 @@
                             <p class="m-0">Profession</p>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
                 </div>
                 <div class="testimonial-item p-4 my-5">
                     <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
@@ -549,7 +549,7 @@
                             <p class="m-0">Profession</p>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
                 </div>
                 <div class="testimonial-item p-4 my-5">
                     <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
@@ -560,7 +560,7 @@
                             <p class="m-0">Profession</p>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
                 </div>
                 <div class="testimonial-item p-4 my-5">
                     <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
@@ -571,7 +571,7 @@
                             <p class="m-0">Profession</p>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
                 </div>
             </div>
         </div>
