mise à jour des infos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Vente de matériaux de construction</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de contrcution</h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de contrution</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, négoce, vente et transport de matériaux de construction pour les professionnels et les particuliers.</p></span>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
@@ -99,7 +99,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de constructions</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de contrcution</h1>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de contrution</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, négoce, vente et transport de matériaux de construction pour les professionnels et les particuliers.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
@@ -129,18 +129,18 @@
                         des travaux d'ornement ou de construction dans l’Ogooué Maritime ? <br> Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
                         Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de construction dans la province !  <br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
-                        Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
+                        Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels pour des travaux publics et privés. <br>
                     </p>
                     <div class="row g-4 mb-5">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                             <i class="fa fa-globe fa-3x text-primary mb-3"></i>
                             <h5>Couverture nationale</h5>
-                            <p class="m-0">Nous vous livrons selon les zone d'accessibilité rurale</p>
+                            <p class="m-0">BIKERE Ambitionne à terme de tisser une communauté nationale de centrale d'achats dans les 9 provinces afin de servir au mieux sa clientèle en proposant la meilleure prestation au juste prix.</p>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                             <i class="fa fa-shipping-fast fa-3x text-primary mb-3"></i>
                             <h5>Livraison à temps</h5>
-                            <p class="m-0">Nousvous livrons à temps pour vous permettre de terminer vos travaux à temps</p>
+                            <p class="m-0">Rapidité du traitement de la commande et livraison à temps tout prêt de chez vous sont notre force</p>
                         </div>
                     </div>
                     <a href="" class="btn btn-primary py-3 px-5">En savoir plus</a>
@@ -157,8 +157,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Quelques faits</h6>
-                    <h1 class="mb-5">Un endroit pour gérer tous votre logistque</h1>
-                    <p class="mb-5">Soucieux des enjeux économiques actuels, Bikere a mis en place une plateforme de gestion de vos logistique</p>
+                    <h1 class="mb-5">Une plateforme pour assurer toute votre logistque</h1>
+                    <p class="mb-5">Notre plateforme d'Accueil vous assure un traitement rapoide de votre command et met en place une programmation adaptée à chaque contexte.</p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
@@ -239,7 +239,7 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-4.jpg" alt="">
                         </div>
-                        <h4 class="mb-3">Transport ferroviaire</h4>
+                        <h4 class="mb-3">Transport</h4>
                         <p>Détails en cours de chargement et seront disponibles plus tard</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
@@ -249,7 +249,7 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-5.jpg" alt="">
                         </div>
-                        <h4 class="mb-3">Dédouanement</h4>
+                        <h4 class="mb-3">Négoces</h4>
                         <p>Détails en cours de chargement et seront disponibles plus tard</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
