--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Quelques faits</h6>
                     <h1 class="mb-5">Une plateforme pour assurer toute votre logistque</h1>
-                    <p class="mb-5">Notre plateforme d'Accueil vous assure un traitement rapoide de votre command et met en place une programmation adaptée à chaque contexte.</p>
+                    <p class="mb-5">Notre plateforme d'Accueil vous assure un traitement rapide de votre Commande et met en place une programmation adaptée à chaque contexte.</p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
