--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         des travaux d'ornement ou de construction dans l’Ogooué Maritime ? <br> Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br><br>
                     <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de construction dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
-                        Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels pour des travaux publics et privés. <br>
+                        Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
                     </p>
                     <div class="row g-4 mb-5">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
