--- a/about.html
+++ b/about.html
@@ -89,8 +89,8 @@
     <!-- Page Header End -->
 
 
-    <!-- About Start -->
-    <div class="container-fluid overflow-hidden py-5 px-lg-0">
+     <!-- About Start -->
+     <div class="container-fluid overflow-hidden py-5 px-lg-0">
         <div class="container about py-5 px-lg-0">
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
@@ -100,18 +100,23 @@
                 </div>
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="text-secondary text-uppercase mb-3">A Propos de nous</h6>
-                    <h1 class="mb-5">Solutions rapides de transport et de vente de granulats</h1>
-                    <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
+                    <p class="mb-5">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
+                        des travaux d'ornement ou de construction dans l’Ogooué Maritime ? <br> Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br><br>
+                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de construction dans la province ! </strong> <br><br>
+                        Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
+                        Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
+                    </p>
                     <div class="row g-4 mb-5">
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                             <i class="fa fa-globe fa-3x text-primary mb-3"></i>
-                            <h5>Couverture mondiale</h5>
-                            <p class="m-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam justo.</p>
+                            <h5>Couverture nationale</h5>
+                            <p class="m-0">BIKERE Ambitionne à terme de tisser une communauté nationale de centrale d'achats dans les 9 provinces afin de servir au mieux sa clientèle en proposant la meilleure prestation au juste prix.</p>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                             <i class="fa fa-shipping-fast fa-3x text-primary mb-3"></i>
                             <h5>Livraison à temps</h5>
-                            <p class="m-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam justo.</p>
+                            <p class="m-0">Rapidité du traitement de la commande et livraison à temps tout prêt de chez vous sont notre force</p>
                         </div>
                     </div>
                     <a href="" class="btn btn-primary py-3 px-5">En savoir plus</a>
@@ -128,8 +133,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Quelques faits</h6>
-                    <h1 class="mb-5">#1 endroit pour gérer tous vos envois</h1>
-                    <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="mb-5">Une plateforme pour assurer toute votre logistque</h1>
+                    <p class="mb-5">Notre plateforme d'Accueil vous assure un traitement rapide de votre Commande et met en place une programmation adaptée à chaque contexte.</p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
@@ -174,26 +179,31 @@
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Nos caractéristiques</h6>
-                    <h1 class="mb-5">Nous sommes une entreprise de transport et vente de confiance depuis 1990</h1>
+                    <h5 class="mb-5" >Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
+                        Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de construction dans la province !</h5>
                     <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="fa fa-globe text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
-                            <h5>Service dans le monde entier</h5>
-                            <p class="mb-0">Diam dolor ipsum sit amet eos erat ipsum lorem sed stet lorem sit clita duo justo magna erat amet</p>
+                            <h5>Service dans le Gabon entier</h5>
+                            <p class="mb-0" style="text-align: justify;> <span style="color: blue;"> BIKERE :</span> une commande de sable ? Des travaux de terrassement ?
+                                Nous vous approvisionnons en sable, en graviers, en ciment… et vous garantissons les meilleurs matériaux selon leur utilisation. <br><br>
+                                
+                                 </p>
                         </div>
                     </div>
                     <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s">
                         <i class="fa fa-shipping-fast text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>Livraison à temps</h5>
-                            <p class="mb-0">Diam dolor ipsum sit amet eos erat ipsum lorem sed stet lorem sit clita duo justo magna erat amet</p>
+                            <p class="mb-0" style="text-align: justify;">Nous  accordons beaucoup d’importance à la satisfaction de nos clients.
+                                Nous associons nos capacités commerciales et notre expérience pour vous garantir une livraison rapide, un tarif avantageux et des travaux de qualité.</p>
                         </div>
                     </div>
                     <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s">
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>24/7 Assistance téléphonique</h5>
-                            <p class="mb-0">Diam dolor ipsum sit amet eos erat ipsum lorem sed stet lorem sit clita duo justo magna erat amet</p>
+                            <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard</p>
                         </div>
                     </div>
                 </div>
