--- a/testimonial.html
+++ b/testimonial.html
@@ -88,8 +88,8 @@
     </div>
     <!-- Page Header End -->
 
-<!-- Testimonial Start -->
-<div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+ <!-- Testimonial Start -->
+ <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="text-center">
             <h6 class="text-secondary text-uppercase">Témoignages</h6>
@@ -105,7 +105,7 @@
                         <p class="m-0">Profession</p>
                     </div>
                 </div>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
             </div>
             <div class="testimonial-item p-4 my-5">
                 <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
@@ -116,7 +116,7 @@
                         <p class="m-0">Profession</p>
                     </div>
                 </div>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
             </div>
             <div class="testimonial-item p-4 my-5">
                 <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
@@ -127,7 +127,7 @@
                         <p class="m-0">Profession</p>
                     </div>
                 </div>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
             </div>
             <div class="testimonial-item p-4 my-5">
                 <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
@@ -138,7 +138,7 @@
                         <p class="m-0">Profession</p>
                     </div>
                 </div>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard.</p>
             </div>
         </div>
     </div>
